# flowiz

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  MIGRATION.md  README.md  build.sh  f2i.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/scripts/: build_opencv_dis.sh  fetch_raft_models.py
.github/workflows/: build-assets.yml  ci.yml  flowiz-docker-ci.yml  pages.yml  release.yml
css/: materialize.css  style.css
demo/: test.ipynb  test.sh
demo/flo/: frame_0002.flo  frame_0003.flo
docs/: FLOWIZ-V3-PRD-SDD.md  LEARN-PANEL-CONTENT.md  LEARN-PANEL-SDD.md  OPTICAL-FLOW-GENERATION-SDD.md
docs/site/: api.md  cli.md  formats.md  getting-started.md  index.md  metrics.md  papers.md  visualization.md
examples/: 01_quickstart.py  02_kitti_groundtruth.py  03_raft_output_torch.py  04_error_maps_paper_figure.py  05_video_from_sequence.py  README.md
flowiz/: __init__.py  __main__.py  batch.py  flowiz.py  video.py
flowiz/cli/: __init__.py  app.py
flowiz/core/: __init__.py  colorize.py  flow.py  metrics.py  quiver.py
flowiz/gui/: __init__.py  __main__.py  gui.py  index.py
flowiz/gui/web/: index.html
flowiz/gui/web/css/: style.css
flowiz/gui/web/guitemp/: index.html
flowiz/gui/web/js/: script.js
flowiz/gui/web/mockup/: index.html
flowiz/io/: __init__.py  flo.py  flo5.py  kitti.py  npy.py  pfm.py  torch_interop.py
js/: script.js
scripts/: build.sh  gh-pages.sh  gui.sh  release.sh
tests/: conftest.py  reference_flow_vis.py  test_batch.py  test_cli.py  test_colorize.py  test_examples.py  test_flow.py  test_io.py  test_metrics.py  test_parity.py  test_quiver.py  test_video.py
tmp/: frame_0001.flo  frame_0004.flo  frame_0005.flo
viewer/: index.html  package.json  tsconfig.json  vite.config.ts
viewer/public/: manifest.webmanifest
viewer/public/models/: README.md
viewer/src/: colorwheel.test.ts  colorwheel.ts  examples.ts  flow.test.ts  flow.ts  learn-content.ts  learn-figures.ts  learn.ts  main.ts  render.ts  style.css
viewer/src/export/: colorize.ts  convert.ts  gif.ts  mp4.ts  png16.ts  writers.test.ts  writers.ts  zip.ts
viewer/src/flowgen/: asset-cache.ts  base-url.ts  dis.ts  engine.ts  fetch-progress.ts  job-manager.ts  letterbox.test.ts  letterbox.ts  models.ts  raft.ts  types.ts  worker.ts
viewer/src/types/: gifenc.d.ts
viewer/src/ui/: convert-panel.ts  export-menu.ts  filmstrip.ts  generate-panel.ts  modal.ts  progress-format.ts  status-chip.ts  toast.ts
viewer/src/video/: decode.ts  ffmpeg-decode.ts
